# reviewai-gerrit-plugin

./: .gitignore  MODULE.bazel  README.md  eslint.config.mjs  gerrit.config  package.json  pom.xml
.gerrit/: Jenkinsfile
frontend/: plugin.js
src/main/resources/config/: formatRepliesTool.json  getContentTool.json  grepTool.json  prompts.json  promptsAiSuggest.json  promptsOpenAiReview.json  promptsStateful.json  promptsStatefulRequests.json  promptsStatefulReview.json  promptsStateless.json  treeTool.json
src/main/resources/documentation/: about.md
src/main/resources/localization/: localTexts.properties
src/main/resources/static/: ai-code-review.js  init.js
src/main/resources/static/reviewai/: api.js  components.js  entries.js  register.js  render.js  reviewAgent.js  shared.js
src/test/resources/__files/: agentConversationResponse.json  agentResponseBodyPathLineJson.json  agentResponseLineOnlyJson.json  agentResponseNestedLocationJson.json  agentResponseNestedTextValueJson.json  aiChatResponseArrayJsonContent.json  aiChatResponseCommentsJsonContent.json  aiChatResponseJsonContent.json  aiChatResponsePositiveJsonContent.json  aiChatResponseTopicRelatedJsonContent.json  aiChatResponseUnexpectedJsonContent.json  aiChatResponseWithCodeToken.json  gerritPatchSetDetail.json
src/test/resources/__files/commands/: debuggingMessagesDisabledSystemMessage.txt  dumpConfig.txt  dumpStoredDataSystemMessage.txt  partialReviewPositiveScoreNoVoteSystemMessage.txt  showPromptsRemovedTitle.txt  showPromptsTitles.txt  (+1 more)
src/test/resources/reducePatchSet/: patchSetDiffOutput.json
(+355 files in other folders)
