module(
    name = "reviewai-gerrit-plugin",
    version = "3.1.1",
)

bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "reviewai_plugin_deps", # MUST BE PLUGIN-SCOPED
    artifacts = [
        "dev.langchain4j:langchain4j:1.13.0",
        "dev.langchain4j:langchain4j-open-ai:1.13.0",
        "dev.langchain4j:langchain4j-google-ai-gemini:1.13.0",
        "com.openai:openai-java-client-okhttp:4.31.0",
        "org.apache.commons:commons-collections4:4.5.0",
        "org.wiremock:wiremock-standalone:3.13.1",
        "org.projectlombok:lombok:1.18.40",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "reviewai_plugin_deps")
